--- a/package.json
+++ b/package.json
@@ -20,17 +20,12 @@
     "@tabler/icons-react": "^2.25.0",
     "@tanstack/react-query": "^4.29.23",
     "@tanstack/react-query-devtools": "^4.29.23",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
     "@walletconnect/modal-auth-react": "^2.6.0",
     "@web3modal/ethereum": "^2.7.0",
     "@web3modal/react": "^2.7.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
     "formik": "^2.4.2",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
@@ -39,14 +34,18 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
     "viem": "^1.2.15",
     "wagmi": "^1.3.8",
     "yup": "^1.2.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.10",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -54,6 +53,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "typescript": "5.1.6"
   }
 }
