feat: create project form, project page

--- a/package.json
+++ b/package.json
@@ -16,26 +16,24 @@
     "@mantine/hooks": "^6.0.16",
     "@mantine/modals": "^6.0.16",
     "@mantine/next": "^6.0.16",
+    "@mantine/notifications": "^6.0.18",
     "@tabler/icons": "^2.25.0",
     "@tabler/icons-react": "^2.25.0",
     "@tanstack/react-query": "^4.29.23",
     "@tanstack/react-query-devtools": "^4.29.23",
-    "@walletconnect/modal-auth-react": "^2.6.0",
-    "@web3modal/ethereum": "^2.7.0",
-    "@web3modal/react": "^2.7.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "nanoid": "^4.0.2",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
-    "viem": "^1.2.15",
-    "wagmi": "^1.3.8",
     "yup": "^1.2.0",
     "zustand": "^4.3.9"
   },
@@ -43,10 +41,11 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "@typescript-eslint/parser": "^6.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
